[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdmri_tools"
version = "0.0.2"
authors = [
  { name="James Brownsey", email="james.brownsey25@imperial.ac.uk" },
]
description = "A package of tools for multidimensional biophysical modelling"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"numpy>=1.21",
	"scipy>=1.8",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]


[project.urls]
Homepage = "https://github.com/james-brownsey25/mdmri_tools"
